--- a/setup.cfg
+++ b/setup.cfg
@@ -57,6 +57,9 @@ sphinx =
     plotly
     torch
     tensorflow
+    tensorflow-probability
+    pyro-ppl
+    pystan
     graphviz
     sphinx-click
     sphinx_inline_tabs
