--- a/setup.cfg
+++ b/setup.cfg
@@ -61,7 +61,7 @@ sphinx =
     sphinxext-rediraffe~=0.2.3
     sympy
     sphinx-proof
-    jax
+    jax[cpu]
     jax.numpy
 testing =
     beautifulsoup4
