--- a/setup.cfg
+++ b/setup.cfg
@@ -60,9 +60,12 @@ sphinx =
     sphinx_inline_tabs
     sphinxext-rediraffe~=0.2.3
     sympy
+    torch
+    tensorflow
     sphinx-proof
-    jax[cpu]
+    jax
     jax.numpy
+    jaxlib
 testing =
     beautifulsoup4
     beautifulsoup4
