--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ author = Álvaro Mauricio Montenegro Díaz, Daniel Mauricio Montenegro Reyes
 #version = #control de versiones
 #description = #Descripción corta del libro
 long_description = file: README.md #Descripción larga del libro
-url = https://github.com/AprendizajeProfundo/Libro-Estadistica-Bayesiana
+url = https://github.com/AprendizajeProfundo/Libro-Fundamentos
 license = Attribution 4.0 International (CC BY 4.0) 
 #license_file = LICENSE
 [options]
@@ -64,6 +64,9 @@ sphinx =
     tensorflow
     sphinx-proof
     jax~=0.2.12
+    skimage
+    opencv-python-headless
+    sklearn
 testing =
     beautifulsoup4
     beautifulsoup4
