--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: Estadística Bayesiana
+title: Fundamentos de IA y AP
 author:  Álvaro Mauricio Montenegro Díaz, Daniel Mauricio Montenegro Reyes
 logo: logo-final-ap.png
 
@@ -21,7 +21,7 @@ bibtex_bibfiles:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/AprendizajeProfundo/Libro-Estadistica-Bayesiana  # Online location of your book
+  url: https://github.com/AprendizajeProfundo/Libro-Fundamentos  # Online location of your book
   branch: main  # Which branch of the repository should be used when creating links (optional)
 
 # Add GitHub buttons to your book
