--- a/setup.cfg
+++ b/setup.cfg
@@ -63,7 +63,7 @@ sphinx =
     torch
     tensorflow
     sphinx-proof
-    jax~=0.2.11
+    jax
     scikit-image
     opencv-python-headless
     scikit-learn
