--- a/setup.cfg
+++ b/setup.cfg
@@ -64,7 +64,7 @@ sphinx =
     tensorflow
     sphinx-proof
     jax
-    scikit-image
+    opencv-python-headless
 testing =
     beautifulsoup4
     beautifulsoup4
