--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -22,8 +22,10 @@ jobs:
     - name: Install dependencies
       run: |
         pip install -r requirements.txt
-        pip install sphinx
-        pip install jupyter-book
+        pip install sphinx==3.1.0
+        pip install jupyter-book==0.13.0
+        pip install sphinx_inline_tabs
+        pip install sphinx_click
     # Build the book
     - name: Build the book
       run: |
